<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/nightmode"
        android:icon="@drawable/ic_baseline_light_mode_24"
        android:title="@string/night_light_mode"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mnu_List"
        android:title="@string/github_user"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mnu_Favorite"
        android:title="@string/favorite_user"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about_page"
        android:title="@string/about_me"
        app:showAsAction="never"/>
</menu>